# Process this file with autoconf to produce a configure script.
AC_INIT([pingerd.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([config], [config_init], [LIBS="-lconfig $LIBS"], [AC_MSG_ERROR([libconfig was not found])])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([])

AC_OUTPUT([Makefile])

